# robofusionbench

./: .gitignore  README.md  pyproject.toml
docs/: experiment_plan.md  project_spec.md  research_questions.md
src/robofusionbench/plotting/: trajectory_plot.py
src/robofusionbench/sensors/: absolute_position.py  odometry.py
src/robofusionbench/sim/: kinematics.py  simulate.py  trajectories.py
tests/: test_kinematics.py  test_sensors.py  test_trajectories.py
